--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .formStyle{
-  @apply flex flex-col items-center gap-y-5 p-10 rounded-sm bg-neutral-200 w-min mx-auto;
+  @apply flex flex-col  gap-y-5 p-10 rounded-sm bg-neutral-200 w-min mx-auto;
 }
 
 .inputWrapper{
@@ -13,11 +13,11 @@
 .createBtn{
   @apply px-5 py-3 hover:bg-sky-400 bg-sky-500 rounded-sm text-white transition-transform hover:scale-105 duration-200 ease-out active:scale-100;
 }
-#label{
+.label{
   @apply font-bold;
 }
 input:not([type="checkbox"]), textarea{
-  @apply px-5 py-2 focus:outline-none rounded-sm w-[500px];
+  @apply px-5 py-2 focus:outline-none rounded-sm;
 }
 
 img{
